# dc-motor

./: Cargo.toml  requirements.md
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: current.rs
firmware/src/serial/: i2c.rs  uart.rs  usb.rs
interface/: Cargo.toml
interface/examples/: tokio.rs
interface/src/: decoder.rs  encoder.rs  implementation_tokio.rs  lib.rs
src/: adc.rs  main.rs  motor_controller.rs  safety_watchdog.rs  serial.rs  usb.rs
src/serial/: decoder.rs  encoder.rs  handler.rs  i2c.rs  uart.rs  usb.rs
