# TODO: Remove unused deps

[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.7", features = [
  "task-arena-size-98304",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.4", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4", features = [
  "defmt",
  # "unstable-pac",
  "time-driver",
  "critical-section-impl",
  # "intrinsics",
  # "rom-v2-intrinsics",
  "rp2040",
] }
embassy-usb = { version = "0.4", features = ["defmt"] }
embassy-net = { version = "0.6", features = [
  "defmt",
  "tcp",
  "udp",
  "raw",
  "dhcpv4",
  "medium-ethernet",
  "dns",
  "proto-ipv4",
  "proto-ipv6",
  "multicast",
] }
embassy-net-wiznet = { version = "0.2", features = ["defmt"] }
embassy-futures = { version = "0.1" }
embassy-usb-logger = { version = "0.4" }
# cyw43 = { version = "0.3", features = ["defmt", "firmware-logs"] }
# cyw43-pio = { version = "0.4", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
# fixed = "1.23"
# fixed-macro = "1.2"

# for web request example
# reqwless = { version = "0.13", features = ["defmt"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
# serde-json-core = "0.6"

# for assign resources example
# assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
# display-interface-spi = "0.5"
# embedded-graphics = "0.8"
# mipidsi = "0.9"
# display-interface = "0.5"
byte-slice-cast = { version = "1.2", default-features = false }
# smart-leds = "0.4"
heapless = "0.8"
# usbd-hid = "0.8"
rand_core = "0.6"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
bitflags = { version = "2.9.0", features = ["serde"] }
postcard = { version = "1.1.1", features = ["use-crc", "use-defmt"] }
cobs = { version = "0.3.0", default-features = false, features = ["defmt"] }
crc = "3.2.1"
bytes-buf = { git = "https://github.com/Eoghanmc22/bytes-buf", default-features = false, features = [
  "extra-platforms",
] }
num_enum = { version = "0.7.3", default-features = false }
# log = "0.4"
# rand = { version = "0.9", default-features = false }
# embedded-sdmmc = "0.8"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
